Bug 78549 - FILEOPEN PDF Import: misplaced objects
Summary: FILEOPEN PDF Import: misplaced objects
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: vvort
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-11 07:34 UTC by vvort
Modified: 2014-05-15 12:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Test file (PDF) (1.18 KB, application/pdf)
2014-05-11 07:34 UTC, vvort
Details
Test file (SVG) (5.37 KB, image/svg+xml)
2014-05-11 07:35 UTC, vvort
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vvort 2014-05-11 07:34:34 UTC
Created attachment 98834 [details]
Test file (PDF)

When you open test PDF file, you will see that there is no red circle (actually, it is there, but shifted beyond page boundaries)
Comment 1 vvort 2014-05-11 07:35:01 UTC
Created attachment 98835 [details]
Test file (SVG)
Comment 2 vvort 2014-05-11 07:41:53 UTC
Fixed here:
https://gerrit.libreoffice.org/9310
Comment 3 Commit Notification 2014-05-15 11:49:32 UTC
Vort committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a050856a670db629336681cdf4e5f36c4efefa57

fdo#78549 PDF Import: fix incorrect transformation matrix writing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.