fdo#78549 PDF Import: fix incorrect transformation matrix writing

Change-Id: I60d77e01ea7774c234d1ad1b81b90a7db3461e22